--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.7.0",
+    "@react-google-maps/api": "^2.13.1",
     "antd": "4.18.6",
     "axios": "0.25.0",
     "babel-plugin-import": "1.13.3",
     "body-parser": "1.19.1",
+    "bootstrap": "^5.2.1",
     "cookie-parser": "1.4.6",
     "express": "4.17.2",
     "express-session": "1.17.2",
+    "firebase": "^9.10.0",
     "immutable": "4.0.0",
+    "lottie-react": "^2.3.1",
     "mime": "3.0.0",
     "mongoose": "6.2.1",
     "morgan": "1.10.0",
@@ -19,11 +23,17 @@
     "normalize.css": "8.0.1",
     "react": "17.0.2",
     "react-app-rewired": "2.1.11",
+    "react-bootstrap": "^2.5.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.0",
+    "react-typical": "^0.1.3",
     "redux": "4.1.2",
     "redux-thunk": "2.4.1",
+    "typical": "^7.1.1",
     "uuid": "8.3.2"
   },
   "devDependencies": {
